# BGS

./: CMakeLists.txt  README  README.md  index.html  params.json
Analysis/: CHANGES.txt  LICENSE.txt  MANIFEST  README.txt  setup.py
Analysis/quality/: frameplot.py  generic_plot.py  histogram_of_each_roc_point.py  mergeplots.py  mog2plot.py  plot.py  plot_performance.py  plot_sequence_roc.py  plot_single_roc.py  readfiles.py  rocplot.py  ucvplot.py
Background/config/: Alpha.txt  Gen.txt  Range.txt  SAGMM_Alpha.txt  SAGMM_Range.txt  SAGMM_Threshold.txt  init.txt  sagmm.xml
Background/include/: background_subtraction.h  icdm_model.h  mdgkt_filter.h
Background/src/: CMakeLists.txt  background_subtraction.cpp  bg_points.cpp  bgs.cpp  icdm_model.cpp  mdgkt_filter.cpp  play_sequence.cpp  testIcdm.cpp  testMdgkt.cpp  testVideoMdgkt.cpp
Background/src/scripts/: create_tables.py  plot.sh  plot_median.sh  roc.sh  run_bgs.sh  run_npbgs.sh
FrameReader/src/: CMakeLists.txt
Framework/config/: Framework.xml
Framework/src/: BGSFramework.cpp  BGSFramework.h  CMakeLists.txt  FrameReaderFactory.cpp  FrameReaderFactory.h  FrameworkImpl.cpp  IBGSAlgorithm.h
Framework/src/scripts/: run_mog2.sh
MOG/src/: CMakeLists.txt  MOGBuilder.cpp  MOGBuilder.h
MOG2/config/: MOG2_Threshold.txt  mog2.xml
MOG2/src/: CMakeLists.txt  MOG2Builder.cpp  MOG2Builder.h
NonParametric/config/: Threshold.txt  np_init.yml
NonParametric/src/: CMakeLists.txt  NPBGMain.cpp  NPBuilder.cpp  NPBuilder.h  testNP.cpp
Performance/include/: Performance.h
Performance/src/: CMakeLists.txt  CreateDScoreMap.cpp  Measure.cpp  Performance.cpp  testDScore.cpp  testMatBinary.cpp  testPerformance.cpp
Performance/src/scripts/: run_pmbgs.sh
SAGMM/src/: CMakeLists.txt  SAGMMBuilder.cpp  SAGMMBuilder.h
System/: CMakeLists.txt
System/BGSInterface/: CMakeLists.txt
System/Base/src/: BGSSystem.cpp  BGSSystem.h  CMakeLists.txt  ImageFrame.cpp  SystemClient.cpp
System/Builder/: CMakeLists.txt
System/Builder/MOG/: README
System/Builder/MOG/src/: CMakeLists.txt
System/Builder/MOG2/: README
System/Builder/MOG2/config/: mog2.xml
System/Builder/MOG2/src/: CMakeLists.txt  MOG2Builder.h
System/Builder/NonParametric/config/: np.xml  np_init.txt
System/Builder/NonParametric/src/: CMakeLists.txt  NPBGMain.cpp
System/Builder/NonParametric/src/scripts/: run_npbgs.sh  run_npbgs_window.sh
System/Builder/SAGMM/: README
System/Builder/SAGMM/src/: CMakeLists.txt  SAGMMBuilder.cpp  SAGMMBuilder.h
System/Builder/UCV_GMM/config/: ucv.xml
System/Builder/UCV_GMM/src/: CMakeLists.txt  UCVBuilder.cpp
System/Builder/UCV_GMM/src/scripts/: run_ucv.sh
System/SAGMM/: README
System/SAGMM/config/: bg_multiplot.cfg  compare_opencv_matlab.cfg
System/SAGMM/include/: background_subtraction.h  icdm_model.h  mdgkt_filter.h
System/SAGMM/src/: CMakeLists.txt  background_subtraction.cpp  bg_points.cpp  init.txt  mdgkt_filter.cpp  play_sequence.cpp  play_sequence_masks.cpp  sagmm_client.cpp  testIcdm.cpp  testMdgkt.cpp  testVideoMdgkt.cpp
System/SAGMM/src/scripts/: bg_multiplot.sh  broxPlot.py  fitBG.py  plot_mean.sh  run_bgs.sh  run_bgs_images.sh  senFit.py  sen_gnuplot.sh  sensitivityPlot.py  speFit.py  specificityPlot.py
Test/src/: CMakeLists.txt  test.cpp  test.py
UCV_GMM/: README
UCV_GMM/config/: UCV_LearningRate.txt  UCV_Threshold.txt  ucv.xml
UCV_GMM/src/: CMakeLists.txt  UCVBuilder.cpp  UCVBuilder.h  testUCV.cpp
UCV_GMM/src/scripts/: run_ucv.sh
Utils/: CMakeLists.txt  README
Utils/FileUtils/include/: BGSTimer.h  DisplayImageUtils.h  utils.h
Utils/FileUtils/src/: BGSTimer.cpp  CMakeLists.txt  DisplayImageUtils.cpp  utils.cpp
Utils/FrameReader/src/: CMakeLists.txt  FrameReaderFactory.cpp  FrameReaderFactory.h
Utils/include/: utils.h
Utils/src/: BGSTimer.cpp  CMakeLists.txt  utils.cpp
