CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(BGS)

ADD_SUBDIRECTORY(Utils/src)
ADD_SUBDIRECTORY(Performance/src)
ADD_SUBDIRECTORY(Background/src)
ADD_SUBDIRECTORY(ThirdParty/bg_subt_code)
ADD_SUBDIRECTORY(Framework/src)
ADD_SUBDIRECTORY(NonParametric/src)
ADD_SUBDIRECTORY(MOG/src)
ADD_SUBDIRECTORY(MOG2/src)
ADD_SUBDIRECTORY(SAGMM/src)
#ADD_SUBDIRECTORY(UCV_GMM/src)
